updated send= button

--- a/index.html
+++ b/index.html
@@ -753,8 +753,9 @@
     <div  class="form-field">
       <label for="name"  class="form-label">Ім'я</label>
       <input type="text" name="name"id="name" class="form-input">
-      <svg class="icon-man-modal">
-        <use href=""></use>
+      <svg class="icon-man-modal" Width="18"Height="18">
+        <use href="./images/symbol-defs.svg#icon-man" 
+    ></use>
       </svg>
      </div>
      <div class="form-field">
