add icons to modal

--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
     <div  class="form-field">
       <label for="name"  class="form-label">Ім'я</label>
       <input type="text" name="name"id="name" class="form-input">
-      <svg class="icon-man-modal" Width="18"Height="18">
+      <svg class="icon-modal">
         <use href="./images/symbol-defs.svg#icon-man" 
     ></use>
       </svg>
@@ -761,15 +761,15 @@
      <div class="form-field">
        <label for="tel" class="form-label">Телефон</label>
        <input type="tel" name="tel" id="tel" class="form-input">
-       <svg>
-        <use href=""></use>
+       <svg  class="icon-modal"  >
+        <use href="./images/symbol-defs.svg#icon-phone-2"></use>
       </svg>
      </div>
      <div class="form-field">
        <label for="email" class="form-label">Пошта</label>
        <input type="email" name="email" id="email" class="form-input" >
-       <svg>
-        <use href=""></use>
+       <svg  class="icon-modal"  >
+        <use href="./images/symbol-defs.svg#icon-mail-2"></use>
       </svg>
      </div>
      <div class="form-field">
