--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
       <label for="name"  class="form-label">Ім'я</label>
       <div class="icon-box">
         <input type="text" name="name"id="name" class="form-input">
-        <svg class="icon-input">
+        <svg class="icon-input modal-icon-man ">
           <use href="./images/symbol-defs.svg#icon-man" 
       ></use>
         </svg>
@@ -775,7 +775,7 @@
        <label for="tel" class="form-label">Телефон</label>
        <div class="icon-box">
         <input type="tel" name="tel" id="tel" class="form-input">
-        <svg  class="icon-input"  >
+        <svg  class="icon-input modal-icon-phone"  >
          <use href="./images/symbol-defs.svg#icon-modal-phone"></use>
        </svg>
        </div>
@@ -785,7 +785,7 @@
        <label for="email" class="form-label">Пошта</label>
        <div class="icon-box">
         <input type="email" name="email" id="email" class="form-input" >
-        <svg  class="icon-input"  >
+        <svg  class="icon-input modal-icon-mail"  >
          <use href="./images/symbol-defs.svg#icon-modal-email"></use>
        </svg></div>
      </div>
