add custom checkbox

--- a/index.html
+++ b/index.html
@@ -798,7 +798,10 @@
 
   <div class="agree-policy">
     <input type="checkbox"  name="agree-poilicy" id="agree-poilicy" class="policy-checkbox">
-    <label for="agree-poilicy" class="policy-label" ">Погоджуюся з розсилкою та приймаю <span ><a href="#" class="policy-link">Умови договору</a></span></label>
+    <svg class="custom-checkbox">
+      <use class="custom-checkbox-icon" href="./images/symbol-defs.svg#icon-modal-phone"></use>
+    </svg>
+    <label for="agree-poilicy" class="policy-label">Погоджуюся з розсилкою та приймаю <span ><a href="#" class="policy-link">Умови договору</a></span></label>
   </div>
   <button type="submit" class="send-button">Відправити</button>
 
