--- a/index.html
+++ b/index.html
@@ -796,13 +796,14 @@
 </form>
 
 
-  <div class="agree-policy">
-    <input type="checkbox"  name="agree-poilicy" id="agree-poilicy" class="policy-checkbox">
+<label for="agree-poilicy" class="checkbox-lable">
+    <input type="checkbox"  name="agree-poilicy" id="agree-poilicy" class="checkbox-origin">
     <svg class="custom-checkbox">
-      <use class="custom-checkbox-icon" href="./images/symbol-defs.svg#icon-modal-phone"></use>
+      <use class="custom-checkbox-icon" href="./images/symbol-defs.svg#icon-confirm"></use>
     </svg>
-    <label for="agree-poilicy" class="policy-label">Погоджуюся з розсилкою та приймаю <span ><a href="#" class="policy-link">Умови договору</a></span></label>
-  </div>
+    Погоджуюся з розсилкою та приймаю &#160 <span ><a href="#" class="policy-link">Умови договору</a></span>
+    </label>
+
   <button type="submit" class="send-button">Відправити</button>
 
       
